Messing with section header

--- a/index.html
+++ b/index.html
@@ -76,10 +76,14 @@
   </header>
 
   <!-- Portfolio Grid Section -->
-  <section id="portfolio">
-              <div class="container">
-      <h2 class="text-center">THE MAP</h2>
-      <hr class="star-primary">
+    <section id="portfolio">
+      <div class="container">
+
+  <!-- Portfolio Section Heading -->
+    <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Where Are the Significant Sherlock Holmes Sites?</h2>
+
+    <!--   <h2 class="text-center">THE MAP</h2> -->
+      <hr class="star-primary"> 
 <div id='map' style='width: 1100px; height: 900px;'></div>
 
       <script>
