--- a/index.html
+++ b/index.html
@@ -80,10 +80,12 @@
       <div class="container">
 
   <!-- Portfolio Section Heading -->
-    <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Where Are the Significant Sherlock Holmes Sites?</h2>
+    <b>
+    <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Watson this Map?</h2>
+    <b>
 
     <!--   <h2 class="text-center">THE MAP</h2> -->
-      <hr class="star-primary"> 
+      <hr class="star-primary">
 <div id='map' style='width: 1100px; height: 900px;'></div>
 
       <script>
