--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 mapboxgl.accessToken = 'pk.eyJ1IjoiMHJlZGZlYXRoZXIiLCJhIjoiY2puZzVlYTFmNDZ6bjN3cW8xMHAwNG53NSJ9.hQc74nd7nsRsbm_2ZWB8sw';
 var map = new mapboxgl.Map({
 container: 'map',
-style: 'mapbox://styles/0redfeather/cjnq9xxfe0vcx2spl9snvquqi',
+style: 'mapbox://styles/0redfeather/ck578vw2d03gg1co4dkmu5bd1',
 center: [-73.943395, 40.740066],
 zoom: 10.2
 });
@@ -102,7 +102,7 @@ zoom: 10.2
 
 map.on('click', function(e) {
 var features = map.queryRenderedFeatures(e.point, {
-  layers: ['marvel-map-data'] // replace this with the name of the layer
+  layers: ['Holmes'] // replace this with the name of the layer
 });
 
 if (!features.length) {
