--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
   <!-- Portfolio Section Heading -->
     <b>
-    <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Watson this Map?</h2>
+    <h2 class="text-center text-uppercase text-secondary mb-0">Watson this Map?</h2>
     <b>
 
     <!--   <h2 class="text-center">THE MAP</h2> -->
