Changing map locatoin

--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@ mapboxgl.accessToken = 'pk.eyJ1IjoiMHJlZGZlYXRoZXIiLCJhIjoiY2puZzVlYTFmNDZ6bjN3c
 var map = new mapboxgl.Map({
 container: 'map',
 style: 'mapbox://styles/0redfeather/ck578vw2d03gg1co4dkmu5bd1',
-center: [-73.943395, 40.740066],
+center: [12.0851.508,-0.110]
+//[-73.943395, 40.740066],
 zoom: 10.2
 });
 
