--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title></title>
+  <title>Sherlock Holmes</title>
 
   <!-- Custom fonts for this theme -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -94,7 +94,6 @@ var map = new mapboxgl.Map({
 container: 'map',
 style: 'mapbox://styles/0redfeather/ck578vw2d03gg1co4dkmu5bd1',
 center: [-0.113135, 51.494838],
-//[-73.943395, 40.740066],
 zoom: 10.2
 });
 
@@ -103,7 +102,7 @@ zoom: 10.2
 
 map.on('click', function(e) {
 var features = map.queryRenderedFeatures(e.point, {
-  layers: ['Holmes'] // replace this with the name of the layer
+  layers: ['0redfeather.ck30kboza02842oqybgassf1p-0bnss'] // replace this with the name of the layer
 });
 
 if (!features.length) {
