--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <img class="masthead-avatar mb-5" src="img/Sherlock Holmes.jpg" alt="">
 
       <!-- Masthead Heading -->
-      <h1 class="masthead-heading text-uppercase mb-0">The Legacy of Sherlock Holmes in London</h1>
+      <h1 class="masthead-heading text-uppercase mb-0">Sherlock Holmes in London</h1>
 
       <!-- Icon Divider -->
       <div class="divider-custom divider-light">
@@ -66,7 +66,7 @@
       </div>
 
       <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">From the Victorian Era to Today</p>
+      <p class="masthead-subheading font-weight-light mb-0">Travel through the streets of London to experience the lore surrounding Sherlock Holmes. The map below takes you on a journey through the life and times of the infamous detective, as well as through modern day sites of memorial for the literary and film hero. </p>
 
     </div>
   </header>
@@ -173,7 +173,7 @@
     <div class="container">
 
       <!-- About Section Heading -->
-      <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
+      <h2 class="page-section-heading text-center text-uppercase text-white">Visit!</h2>
 
       <!-- Icon Divider -->
       <div class="divider-custom divider-light">
@@ -187,10 +187,10 @@
       <!-- About Section Content -->
       <div class="row">
         <div class="col-lg-4 ml-auto">
-          <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
+          <p class="lead">Use our map to take yourself on a tour of Sherlock Holmes' sites in London. </p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
+          <p class="lead">There are also plenty of Sherlock Holmes guided tours to partake in while you are London.</p>
         </div>
       </div>
 
