Changing Layer Name

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
         map.on('click', function(e) {
           var features = map.queryRenderedFeatures(e.point, {
-            layers: ['Holmes'] // replace this with the name of the layer
+            layers: ['holmes'] // replace this with the name of the layer
           });
 
           if (!features.length) {
