Giving up hope and resetting pop-up

--- a/index.html
+++ b/index.html
@@ -113,12 +113,13 @@
 
           var popup = new mapboxgl.Popup({ offset: [0, -15] })
             .setLngLat(feature.geometry.coordinates)
-            .setHTML('div {width: 200px; word-break: break-all; white-space: normal;}' + '<h5>' + feature.properties.name +  '</h6><p>' + feature.properties.description  + '</p>' + '<img src="' + feature.properties.img + '" alt="' + feature.properties.name + '" style="width:175px;height:250px;">' + '<p><a href="' + feature.properties.link + '">' + feature.properties.name + '</a></p>')
+            .setHTML('<h5>' + feature.properties.name + '</h6><p>' + feature.properties.description  + '</p>' + '<img src="' + feature.properties.img + '" alt="' + feature.properties.name + '" style="width:175px;height:250px;">' + '<p><a href="' + feature.properties.link + '">' + feature.properties.name + '</a></p>')
             .setLngLat(feature.geometry.coordinates)
             .addTo(map);
           });
 
-
+        //  Possible text wrapping code
+        //  'div {width: 200px; word-break: break-all; white-space: normal;}' +
 </script>
 </section>
 
