--- a/index.html
+++ b/index.html
@@ -182,7 +182,11 @@
       <!-- Biographies -->
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <p class="lead">Sandy Burnley is a Sherlock Holmes fanatic, adopting a mastiff and painting him white after reading Doyles's Hounds of the Baskervilles. Fed up with the frustation, the mastiff left Sandy in the woods during a hike and she was never seen again.</p>
+          <p class="lead"><strong>Sandy Burnley</strong> is a Sherlock Holmes fanatic, adopting a mastiff and painting him white after reading Doyles's Hounds of the Baskervilles. Fed up with the frustation, the mastiff left Sandy in the woods during a hike and she was never seen again.
+            <br><strong>Dani Willcutt</strong>
+            <br><strong>Liao Zhang</strong>
+            <br><strong>Zach Francis</strong>
+          </p>
         </div>
       </div>
 
