--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <i class="fas fa-smoking pipe"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -135,7 +135,7 @@
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <i class="fas fa-smoking pipe"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -174,7 +174,7 @@
       <div class="divider-custom">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <i class="fas fa-smoking pipe"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -183,10 +183,9 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <p class="lead"><strong>Sandy Burnley</strong> is a Sherlock Holmes fanatic, adopting a mastiff and painting him white after reading Doyles's Hounds of the Baskervilles. Fed up with the frustation, the mastiff left Sandy in the woods during a hike and she was never seen again.
-            <br><strong>Dani Willcutt</strong>
-            <br><strong>Liao Zhang</strong>
-            <br><strong>Zach Francis</strong>
-          </p>
+          <p class="lead"><br><strong>Dani Willcutt</strong></p>
+          <p class="lead"><br><strong>Liao Zhang</strong></p>
+          <p class="lead"><br><strong>Zach Francis</strong></p>
         </div>
       </div>
 
