--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-smoking pipe"></i>
+          <i class="fas fa-smoking-pipe "></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -135,7 +135,7 @@
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-smoking pipe"></i>
+          <i class="fas fa-smoking-pipe"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
