--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-smoking-pipe "></i>
+          <i class="fas fa-<img src="https://img.icons8.com/ios-glyphs/30/000000/smoking-pipe.png">"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -135,7 +135,7 @@
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-smoking-pipe"></i>
+          <i class=<img src="https://img.icons8.com/ios-glyphs/30/000000/smoking-pipe.png">></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -174,7 +174,7 @@
       <div class="divider-custom">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-smoking pipe"></i>
+          <img src="https://img.icons8.com/ios-glyphs/30/000000/smoking-pipe.png">
         </div>
         <div class="divider-custom-line"></div>
       </div>
