--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <p class="lead"><strong>Sandy Burnley</strong> is a Sherlock Holmes fanatic, adopting a mastiff and painting him white after reading Doyles's Hounds of the Baskervilles. Fed up with the frustation, the mastiff left Sandy in the woods during a hike and she was never seen again.
-          <p class="lead"><br><strong>Dani Willcutt</strong></p>
+          <p class="lead"><br><strong>Dani Willcutt</strong>is a member of the not-so-secret Society of Prof. Moriarty Apologists. While celebrating the legacy of Holmes and Watson, remember that there are always two sides to every story.</p>
           <p class="lead"><br><strong>Liao Zhang</strong></p>
           <p class="lead"><br><strong>Zach Francis</strong></p>
         </div>
