--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <!-- Biographies -->
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <p class="lead"><p style="font-weight: bold;">Sandy Burnley</p> is a Sherlock Holmes fanatic, adopting a mastiff and painting him white after reading Doyles's Hounds of the Baskervilles. Fed up with the frustation, the mastiff left Sandy in the woods during a hike and she was never seen again.
+          <p class="lead"><b>Sandy Burnley</b> is a Sherlock Holmes fanatic, adopting a mastiff and painting him white after reading Doyles's Hounds of the Baskervilles. Fed up with the frustation, the mastiff left Sandy in the woods during a hike and she was never seen again.
           <p class="lead"><br><b>Dani Willcutt</b>is a member of the not-so-secret Society of Prof. Moriarty Apologists. While celebrating the legacy of Holmes and Watson, remember that there are always two sides to every story.</p>
           <p class="lead"><br><b>Liao Zhang</b></p>
           <p class="lead"><br><b>Zach Francis</b></p>
