--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Sherlock Holmes</title>
+  <title>Elementary, Watson</title>
 
   <!-- Custom fonts for this theme -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -43,7 +43,7 @@
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">Visit</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">The Team Behind the Sherlock Holmes Experience</a>
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">The Team</a>
           </li>
         </ul>
       </div>
@@ -64,7 +64,7 @@
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <img src="https://img.icons8.com/ios-glyphs/30/000000/smoking-pipe.png">
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -135,7 +135,7 @@
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <img src="https://img.icons8.com/ios-glyphs/30/000000/smoking-pipe.png">
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -174,50 +174,18 @@
       <div class="divider-custom">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <img src="https://img.icons8.com/ios-glyphs/30/000000/smoking-pipe.png">
         </div>
         <div class="divider-custom-line"></div>
       </div>
 
-      <!-- Contact Section Form -->
+      <!-- Biographies -->
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-          <form name="sentMessage" id="contactForm" novalidate="novalidate">
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Name</label>
-                <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name.">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Email Address</label>
-                <input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address.">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Phone Number</label>
-                <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="required" data-validation-required-message="Please enter your phone number.">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Message</label>
-                <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <br>
-            <div id="success"></div>
-            <div class="form-group">
-              <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
-            </div>
-          </form>
+          <p class="lead"><b>Sandy Burnley</b> is a Sherlock Holmes fanatic, adopting a mastiff and painting him white after reading Doyles's Hounds of the Baskervilles. Fed up with the frustation, the mastiff left Sandy in the woods during a hike and she was never seen again.
+          <p class="lead"><br><b>Dani Willcutt</b>is a member of the not-so-secret Society of Prof. Moriarty Apologists. While celebrating the legacy of Holmes and Watson, remember that there are always two sides to every story.</p>
+          <p class="lead"><br><b>Liao Zhang</b> is working hard-ish on completing his dissertation so he can really binge-watch BBC's Sherlock without feeling so guilty.</p>
+          <p class="lead"><br><b>Zach Francis</b></p>
         </div>
       </div>
 
@@ -233,7 +201,7 @@
         <div class="col-lg-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Location</h4>
           <p class="lead mb-0">LEADR LAB Old Horticulture
-            <br>Michigan State University 
+            <br>Michigan State University
             <br>East Lansing, Michigan</p>
         </div>
 
@@ -249,7 +217,7 @@
           <a class="btn btn-outline-light btn-social mx-1" href="#">
             <i class="fab fa-fw fa-linkedin-in"></i>
           </a>
-  
+
         </div>
 
         <!-- Footer About Text -->
