Changing Map size

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <img class="masthead-avatar mb-5" src="img/Sherlock Holmes.jpg" alt="">
 
       <!-- Masthead Heading -->
-      <h1 class="masthead-heading text-uppercase mb-0">Sherlock Holmes Out & About in London Town</h1>
+      <h1 class="masthead-heading text-uppercase mb-0">Sherlock Holmes Throughout London</h1>
 
       <!-- Icon Divider -->
       <div class="divider-custom divider-light">
@@ -86,7 +86,7 @@
 
     <!--   <h2 class="text-center">THE MAP</h2> -->
       <hr class="star-primary">
-      <div id='map' style='width: 1100px; height: 900px;'></div>
+      <div id='map' style='width: 1110px; height: 600px;'></div>
 
       <script>
         mapboxgl.accessToken = 'pk.eyJ1IjoiMHJlZGZlYXRoZXIiLCJhIjoiY2puZzVlYTFmNDZ6bjN3cW8xMHAwNG53NSJ9.hQc74nd7nsRsbm_2ZWB8sw';
@@ -183,9 +183,10 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <p class="lead"><b>Sandy Burnley</b> is a Sherlock Holmes fanatic, adopting a mastiff and painting him white after reading Doyles's Hounds of the Baskervilles. Fed up with the frustation, the mastiff left Sandy in the woods during a hike and she was never seen again.</p>
+          <p class="lead"><br><b>Dani Willcutt</b>is a member of the not-so-secret Society of Prof. Moriarty Apologists. While celebrating the legacy of Holmes and Watson, remember that there are always two sides to every story.</p>
           <p class="lead"><br><b>Liao Zhang</b> is working hard-ish on completing his dissertation so he can really binge-watch BBC's Sherlock without feeling so guilty.</p>
           <p class="lead"><br><b>Dani Willcutt</b> is a member of the not-so-secret Society of Prof. Moriarty Apologists. While celebrating the legacy of Holmes and Watson, remember that there are always two sides to every story.</p>
-          <p class="lead"><br><b>Zach Francis</b></p> has been a regular contributor to the <i> Strand Mystery Magazine</i> since the inaugral 1891 issue. He is best known for his articles, "How to Tame Your Speckled Band" and "Always the Sidekick: the Life of Dr. Watson."</p>
+          <p class="lead"><br><b>Zach Francis</b></p>
         </div>
       </div>
 
