--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           <p class="lead"><b>Sandy Burnley</b> is a Sherlock Holmes fanatic, adopting a mastiff and painting him white after reading Doyles's Hounds of the Baskervilles. Fed up with the frustation, the mastiff left Sandy in the woods during a hike and she was never seen again.</p>
           <p class="lead"><br><b>Dani Willcutt</b>is a member of the not-so-secret Society of Prof. Moriarty Apologists. While celebrating the legacy of Holmes and Watson, remember that there are always two sides to every story.</p>
           <p class="lead"><br><b>Liao Zhang</b> is working hard-ish on completing his dissertation so he can really binge-watch BBC's Sherlock without feeling so guilty.</p>
-          <p class="lead"><br><b>Zach Francis</b></p> has been a regular contributor to the <i> Strand Mystery Magazine</i> since the inaugral 1891 issue. He is best known for his articles, "How to Tame Your Speckled Band" and "Always the Sidekick: the Life of Dr. Watson."</p>
+          <p class="lead"><br><b>Zach Francis</b> has been a regular contributor to the <i> Strand Mystery Magazine</i> since the inaugural 1891 issue. He is best known for his articles, "How to Tame Your Speckled Band" and "Always the Sidekick: the Life of Dr. Watson."</p>
         </div>
       </div>
 
